force-app/main/default/objects/comsearch_broadcasters__c/comsearch_broadcasters__c.object-meta.xml
<CustomObject>
    <description>Comsearch Broadcasters with information from CS Quarterly Result files.</description>
    <label>ComSearch Broadcasters</label>
    <nameField>
        <label>ComSearch ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comsearch Broadcasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>