force-app/main/default/objects/comsearch_broadcasters__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band (AWS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS-1</fullName>
            </value>
            <value>
                <fullName>AWS-3</fullName>
            </value>
            <value>
                <fullName>AWS 1 &amp; 3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>