force-app/main/default/objects/comsearch_broadcasters__c/fields/Call_Sign_1__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign_1__c</fullName>
    <inlineHelpText>Call Sign from ComSearch</inlineHelpText>
    <label>Call Sign 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>