force-app/main/default/objects/comsearch_broadcasters__c/fields/Call_Sign_2__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign_2__c</fullName>
    <inlineHelpText>From Comsearch</inlineHelpText>
    <label>Call Sign 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>