force-app/main/default/objects/comsearch_broadcasters__c/fields/Comsearch_Quarterly_Results__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Quarterly_Results__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Comsearch Quarterly Results</label>
    <referenceTo>comsearch_results__c</referenceTo>
    <relationshipLabel>Comsearch Broadcasters (2nd Comsearch Quarterly Results)</relationshipLabel>
    <relationshipName>Comsearch_Broadcasters</relationshipName>
    <type>Lookup</type>
</CustomField>