force-app/main/default/objects/comsearch_broadcasters__c/fields/comsearch_results_analysis__c.field-meta.xml
<CustomField>
    <fullName>comsearch_results_analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to look up/roll up date to Comsearch quarterly analysis results (uploaded manually to comsearch results object, then look up to Comsearch broadcaster object</inlineHelpText>
    <label>Comsearch Results/Analysis search</label>
    <referenceTo>comsearch_results__c</referenceTo>
    <relationshipLabel>Comsearch Broadcasters</relationshipLabel>
    <relationshipName>ComSearch</relationshipName>
    <type>Lookup</type>
</CustomField>