force-app/main/default/objects/comsearch_broadcasters__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to allow contact information to be brought over</inlineHelpText>
    <label>Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ComSearch</relationshipName>
    <type>Lookup</type>
</CustomField>