force-app/main/default/objects/comsearch_broadcasters__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <inlineHelpText>Manual Contact address from ULS</inlineHelpText>
    <label>Contact Address</label>
    <length>164</length>
    <type>Text</type>
</CustomField>