force-app/main/default/objects/comsearch_broadcasters__c/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <formula>Contact__r.Comsearch_Contact_City__c</formula>
    <label>Contact City</label>
    <type>Text</type>
</CustomField>