force-app/main/default/objects/comsearch_broadcasters__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <inlineHelpText>Manual contact name</inlineHelpText>
    <label>Contact Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>