force-app/main/default/objects/comsearch_broadcasters__c/fields/Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_State__c</fullName>
    <formula>Contact__r.Comsearch_Contact_State__c</formula>
    <label>Contact State</label>
    <type>Text</type>
</CustomField>