force-app/main/default/objects/comsearch_broadcasters__c/fields/Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street__c</fullName>
    <formula>Contact__r.Comsearch_contact_Street__c</formula>
    <label>Contact Street</label>
    <type>Text</type>
</CustomField>