force-app/main/default/objects/comsearch_broadcasters__c/fields/Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip__c</fullName>
    <formula>Contact__r.Comsearch_Contact_Zip__c</formula>
    <label>Contact Zip</label>
    <type>Text</type>
</CustomField>