force-app/main/default/objects/comsearch_broadcasters__c/fields/Date_PCN_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_PCN_Notice_Sent__c</fullName>
    <label>Date PCN Notice Sent</label>
    <type>Date</type>
</CustomField>