force-app/main/default/objects/comsearch_broadcasters__c/fields/Date_Site_Audit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Site_Audit_Requested__c</fullName>
    <label>Date Site Audit Requested</label>
    <type>Date</type>
</CustomField>