force-app/main/default/objects/comsearch_broadcasters__c/fields/Decomissioned_per_T_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Decomissioned_per_T_Mobile__c</fullName>
    <label>Decomissioned per T-Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>