force-app/main/default/objects/comsearch_broadcasters__c/fields/Freq_1__c.field-meta.xml
<CustomField>
    <fullName>Freq_1__c</fullName>
    <inlineHelpText>Freq 1 from Comsearch</inlineHelpText>
    <label>Freq 1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>