force-app/main/default/objects/comsearch_broadcasters__c/fields/Freq_1_CS_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Freq_1_CS_Quarterly__c</fullName>
    <formula>comsearch_results_analysis__r.Freq__c</formula>
    <inlineHelpText>Populated from Comsearch results lookup above</inlineHelpText>
    <label>Freq 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>