force-app/main/default/objects/comsearch_broadcasters__c/fields/Freq_2__c.field-meta.xml
<CustomField>
    <fullName>Freq_2__c</fullName>
    <label>Freq 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>