force-app/main/default/objects/comsearch_broadcasters__c/fields/License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration_Date__c</fullName>
    <formula>comsearch_results_analysis__r.License_Expiration_Date__c</formula>
    <inlineHelpText>Date from CS Results object</inlineHelpText>
    <label>License Expiration Date</label>
    <type>Date</type>
</CustomField>