force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee__c.field-meta.xml
<CustomField>
    <fullName>Licensee__c</fullName>
    <inlineHelpText>Licensee info from ULS (Manual field)</inlineHelpText>
    <label>Licensee</label>
    <length>64</length>
    <type>Text</type>
</CustomField>