force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_Address__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Address__c</fullName>
    <inlineHelpText>Manual Address updates</inlineHelpText>
    <label>Licensee Address</label>
    <length>160</length>
    <type>Text</type>
</CustomField>