force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_City__c.field-meta.xml
<CustomField>
    <fullName>Licensee_City__c</fullName>
    <formula>Licensee_Contact_Lookup__r.city__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensee City</label>
    <type>Text</type>
</CustomField>