force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensee Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ComSearch1</relationshipName>
    <type>Lookup</type>
</CustomField>