force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_email__c.field-meta.xml
<CustomField>
    <fullName>Licensee_email__c</fullName>
    <formula>Licensee_Contact_Lookup__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Licensee email populated from selecting the licensee</inlineHelpText>
    <label>Licensee email</label>
    <type>Text</type>
</CustomField>