force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Phone__c</fullName>
    <formula>Licensee_Contact_Lookup__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated from the Licensee Lookup, if no licensee, create new contact</inlineHelpText>
    <label>Licensee Phone</label>
    <type>Text</type>
</CustomField>