force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_State__c.field-meta.xml
<CustomField>
    <fullName>Licensee_State__c</fullName>
    <formula>Licensee_Contact_Lookup__r.state__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensee State</label>
    <type>Text</type>
</CustomField>