force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_Street__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Street__c</fullName>
    <formula>Licensee_Contact_Lookup__r.Street_Address__c</formula>
    <inlineHelpText>Key info from Contact, populated from the mailing address create new contact if blank</inlineHelpText>
    <label>Licensee Street</label>
    <type>Text</type>
</CustomField>