force-app/main/default/objects/comsearch_broadcasters__c/fields/Licensee_Zip__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Zip__c</fullName>
    <formula>Licensee_Contact_Lookup__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensee Zip</label>
    <type>Text</type>
</CustomField>