force-app/main/default/objects/comsearch_broadcasters__c/fields/Link_ID__c.field-meta.xml
<CustomField>
    <fullName>Link_ID__c</fullName>
    <inlineHelpText>Number from Comsearch report, listed as text field in excel</inlineHelpText>
    <label>Link ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>