force-app/main/default/objects/comsearch_broadcasters__c/fields/Linked_Station_Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Linked_Station_Call_Sign__c</fullName>
    <formula>comsearch_results_analysis__r.Linked_Station__c</formula>
    <inlineHelpText>Call Sign of related/linked station from CS results</inlineHelpText>
    <label>Linked Station Call Sign</label>
    <type>Text</type>
</CustomField>