force-app/main/default/objects/comsearch_broadcasters__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Limited to 255 characters</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>