force-app/main/default/objects/comsearch_broadcasters__c/fields/Outreach_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Request_Notes__c</fullName>
    <label>Outreach Request Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>