force-app/main/default/objects/comsearch_broadcasters__c/fields/PCN_Notice_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PCN_Notice_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCN Notice File Uploaded</label>
    <type>Checkbox</type>
</CustomField>