force-app/main/default/objects/comsearch_broadcasters__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>In Progress (Licensed)</label>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
                <label>Outreach in Process</label>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Passed Over</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>License Cancelled/Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>