force-app/main/default/objects/comsearch_broadcasters__c/fields/Send_Outreach_Team_Request__c.field-meta.xml
<CustomField>
    <fullName>Send_Outreach_Team_Request__c</fullName>
    <formula>HYPERLINK(&quot;https://na59.salesforce.com/_ui/core/email/author/EmailAuthor?p3_lkid=&quot; &amp; Id &amp;&quot;&amp;template_id=00Xf4000000hmrE&quot; &amp; &quot; &amp; retURL=%2F&quot; &amp; Id , &quot;Click to Send&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Outreach Team Request</label>
    <type>Text</type>
</CustomField>