force-app/main/default/objects/comsearch_broadcasters__c/fields/Site_1__c.field-meta.xml
<CustomField>
    <fullName>Site_1__c</fullName>
    <inlineHelpText>Site 1 listed from Comsearch paper</inlineHelpText>
    <label>Site 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>