force-app/main/default/objects/comsearch_broadcasters__c/fields/Site_2__c.field-meta.xml
<CustomField>
    <fullName>Site_2__c</fullName>
    <inlineHelpText>Site 2 listed from comsearch spreadsheet</inlineHelpText>
    <label>Site 2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>