force-app/main/default/objects/comsearch_broadcasters__c/fields/Site_Audit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Audit_Completed_Date__c</fullName>
    <label>Site Audit Completed Date</label>
    <type>Date</type>
</CustomField>