force-app/main/default/objects/comsearch_broadcasters__c/fields/Status_per_ULS__c.field-meta.xml
<CustomField>
    <fullName>Status_per_ULS__c</fullName>
    <label>Status per ULS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Questionable</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>