force-app/main/default/objects/comsearch_broadcasters__c/fields/Sunset_Letter_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Sunset_Letter_Request_Date__c</fullName>
    <label>Sunset Letter Request Date</label>
    <type>Date</type>
</CustomField>