force-app/main/default/objects/comsearch_broadcasters__c/fields/Sunset_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sunset_Notice_Sent__c</fullName>
    <label>Sunset Notice Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>