force-app/main/default/objects/comsearch_broadcasters__c/fields/Sunset_Notice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sunset_Notice_Sent_Date__c</fullName>
    <label>Sunset Notice Sent Date</label>
    <type>Date</type>
</CustomField>