force-app/main/default/objects/comsearch_broadcasters__c/fields/T_Mobile_Outreach_Contact__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Outreach_Contact__c</fullName>
    <label>T-Mobile Outreach Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Katie Miller</fullName>
            </value>
            <value>
                <fullName>Scott Hewett</fullName>
            </value>
            <value>
                <fullName>David Kocyba</fullName>
            </value>
            <value>
                <fullName>Jeff Mayo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>