force-app/main/default/objects/comsearch_broadcasters__c/fields/ULS_Status_Primary_Sec__c.field-meta.xml
<CustomField>
    <fullName>ULS_Status_Primary_Sec__c</fullName>
    <label>ULS Status (Primary/Sec)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>